<resources>
    <string name="app_name">LaundryApp</string>
    <string name="accept">Accept</string>
    <string name="accounts">Accounts</string>
    <string name="accounts_des">Accounts permission is needed to list of Accounts in your phone, would you like to reconsider?</string>
    <string name="address">Address</string>
    <string name="api_key">AIzaSyBQpPsZd1eF2HH4AWJ50Q-bco4-N6L2BHc</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="available_coupons">Available Coupons</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="button_order_Status">ORDER STATUS</string>
    <string name="button_save">SAVE</string>
    <string name="cancel">Cancel</string>
    <string name="change_profile_picture">Change profile Picture</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="choice_of_wash">Choice Of Wash</string>
    <string name="com.crashlytics.android.build_id">8f5b1bed-8596-4b93-a840-1ef4cc378a89</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="contacts">Contacts</string>
    <string name="contacts_des">Contacts permission is needed to list of contacts in your phone, would you like to reconsider?</string>
    <string name="coupon_code_here">COUPON CODE HERE</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="customize">Customize</string>
    <string name="debug_menu_ad_information">Ad Information</string>
    <string name="debug_menu_creative_preview">Creative Preview</string>
    <string name="debug_menu_title">Select a Debug Mode</string>
    <string name="debug_menu_troubleshooting">Troubleshooting</string>
    <string name="decline">Decline</string>
    <string name="default_web_client_id">265088893425-7uk7bck4kj9hjoq9ouo0jnebhvqd1ekk.apps.googleusercontent.com</string>
    <string name="delivery">DELIVERY</string>
    <string name="dry_cleaning">Dry cleaning</string>
    <string name="easy_to_place_order">Easy to place your order. Our delivery executive will update the item list.</string>
    <string name="enable">Enable</string>
    <string name="express_delivery">express delivery</string>
    <string name="failed_directions">Failed to get driving direction</string>
    <string name="faq">• What is Laundry App?\n \tLaundry App is the one and only solution for premium laundry services in Hyderabad. Our mission is to provide customers with convienent, professional, eco-friendly and hygienic oriented Dry cleaning and Laundry services.We use state-of-the-art equipment with eco-friendly chemicals in the most impressive laundry facility you will have ever seen. It is custom-designed and built for your comfort and convenience. Laundry App provides customers a professional laundry services with Pickup and Delivery service. You can rest assured that our experienced staff will be extremely careful with your order and impress you with our attention to detail.\n\n • What all services do you provide?\n \tLaundry kart provides two services Dry Cleaning and Premium Laundry. Laundry App provides services to Men,Women,Kids,Household and Accessories.\n\n • What if I have delicates or other special laundry needs?\n \tOur laundry professionals will make sure your clothes receive the attention they need. Place special need items in a plastic (grocery) bag with a note on the app, or indicate your request to the driver.\n\n • How long does it take for the Pickup and Delivery service?\n \tLaundry App guarantees to complete your order within 48 hours. Emergency situations can arise and we understand that &amp; we will do our best to deliver as fast as possible. We will always try and exceed your expectations.\n\n • Who uses your Pickup and Drop Off services?\n \tThis service is available to everyone. Our customers range from college students to busy professionals to seniors! Our service is for people who want to free up time from a tedious and labor intensive task.\n\n • When do I pay for your services?\n \tPayment is processed between the days of pickup &amp; delivery. Payment modes include cash on delivery or payment gateway. You can also swipe your credit/debit cards with our drivers for payment.\n\n • I have problem, what do I do?\n \tWe are terribly sorry for the inconvenience. You can call to our customer care number 95 33 400 500. Or you can contact us at help.laundrykart.com.\n\n</string>
    <string name="firebase_database_url">https://laundrykart-98580.firebaseio.com</string>
    <string name="gcm_defaultSenderId">265088893425</string>
    <string name="google_api_key">AIzaSyDq6wohujXRMfu7fgWztcL5ttFZfUeEmVE</string>
    <string name="google_app_id">1:265088893425:android:8cc58ea40a33500e</string>
    <string name="google_crash_reporting_api_key">AIzaSyDq6wohujXRMfu7fgWztcL5ttFZfUeEmVE</string>
    <string name="google_storage_bucket">laundrykart-98580.appspot.com</string>
    <string name="hint_apply_coupon">Apply Coupon Code</string>
    <string name="hint_building_name">Building Name/Flat Number</string>
    <string name="hint_email">Email</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_label">Label</string>
    <string name="hint_landmark">Landmark</string>
    <string name="hint_otp">OTP</string>
    <string name="hint_phone">PHONE NUMBER</string>
    <string name="hint_search_location">Search Location</string>
    <string name="hint_street_locality">Street/Locality</string>
    <string name="hint_tag">Keep your free time free!</string>
    <string name="location">Location</string>
    <string name="location_desc">Location permission is needed to display your current location, would you like to reconsider?</string>
    <string name="location_highaccuracy">Please Change Location Mode to High Accuracy</string>
    <string name="location_mode">Location Mode</string>
    <string name="location_notfound">Failed to find current location</string>
    <string name="menu_account">Account</string>
    <string name="menu_home">Home</string>
    <string name="menu_orders">Orders</string>
    <string name="no_connection">No Connection</string>
    <string name="ok">OK</string>
    <string name="one_day_delivery">Delivery within 48 Hrs</string>
    <string name="order_received">Order Received</string>
    <string name="pickup">PICKUP</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="premium_laundry">Premium Laundry</string>
    <string name="proceed_to_pay">Proceed To Pay</string>
    <string name="project_id">laundryapp-98580</string>
    <string name="regular_delivery">Regular delivery</string>
    <string name="save_address">save address</string>
    <string name="save_changes">save changes</string>
    <string name="search_menu_title">Search</string>
    <string name="status_2001">Order Created</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="switch_gps">Please enable location services.</string>
    <string name="tap_to_select">Tap To Select</string>
    <string name="text_about_us">About Us</string>
    <string name="text_about_us_text">\tLaundry App is the one and only solution for premium laundry services in Hyderabad. Our mission is to provide customers with convienent, professional, eco-friendly and hygienic oriented Dry cleaning and Laundry services.We use state-of-the-art equipment with eco-friendly chemicals in the most impressive laundry facility you will have ever seen. It is custom-designed and built for your comfort and convenience.\n\n\n \t Laundry App provides customers a professional laundry services with Pickup and Delivery service. You can rest assured that our experienced staff will be extremely careful with your order and impress you with our attention to detail.</string>
    <string name="text_arrive_approx">It will arrive approximately at</string>
    <string name="text_bill_amount">Bill Amount:</string>
    <string name="text_cancel_order">Cancel Order</string>
    <string name="text_clean_clothes">Clean my clothes mom!!</string>
    <string name="text_clothes_on_way">Your clothes are on its way to</string>
    <string name="text_confirm_order">Confirm Order</string>
    <string name="text_copy_code">+ copy code</string>
    <string name="text_coupon_code">Coupon Code</string>
    <string name="text_coupon_codes">Coupon Codes</string>
    <string name="text_default_address">Default Address</string>
    <string name="text_delivered">Delivered</string>
    <string name="text_delivery">Delivery Charges</string>
    <string name="text_delivery_to">Delivery to</string>
    <string name="text_dispatched">Dispatched</string>
    <string name="text_drop">Drop</string>
    <string name="text_edit_address">+ edit address</string>
    <string name="text_express_delivery">Express Delivery (Rs.100) (one day delivery)</string>
    <string name="text_extra_Services">Extra Services</string>
    <string name="text_faq">FAQ</string>
    <string name="text_final_billing">Final Billing</string>
    <string name="text_first_order">First Order</string>
    <string name="text_order_status">Status:</string>
    <string name="text_pay_now">Pay Now</string>
    <string name="text_status_delivered">Delivered!</string>
    <string name="text_status_delivered_text">Your order has been delivered.</string>
    <string name="text_status_dispatched">Dispatched!</string>
    <string name="text_status_dispatched_text">Your order has been dispatched.</string>
    <string name="text_status_picked">Picked!</string>
    <string name="text_status_picked_text">Your order has been picked.</string>
    <string name="text_status_washing">Washing!</string>
    <string name="text_status_washing_text">Your clothes are washed.</string>
</resources>