<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_orders"
        android:enabled="true"
        android:icon="@drawable/ic_orders"
        android:title="@string/menu_orders"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_account"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/menu_account"
        app:showAsAction="ifRoom" />
</menu>
