<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:layout_marginTop="20.0dip"
            android:layout_marginRight="15.0dip">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="3.5">

                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="5.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <com.marolix.laundryapp.font.TextView_AvenirLTStd_Book
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_bill_amount" />

                    <com.marolix.laundryapp.font.TextView_AvenirLTStd_Book
                        android:textColor="@android:color/black"
                        android:id="@+id/status_amount_textView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3.0dip" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="5.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <com.marolix.laundryapp.font.TextView_AvenirLTStd_Book
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_order_status" />

                    <com.marolix.laundryapp.font.TextView_AvenirLTStd_Book
                        android:textColor="@android:color/black"
                        android:id="@+id/status_status_textView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3.0dip" />
                </LinearLayout>
            </LinearLayout>

            <com.marolix.laundryapp.font.TextView_AvenirLTStd_Book
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/status_pay_now_textView"
                android:background="@drawable/button_selector"
                android:padding="5.0dip"
                android:visibility="gone"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:text="@string/text_pay_now"
                android:maxLines="1"
                android:layout_weight="1.5" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_marginRight="15.0dip">

            <com.marolix.laundryapp.font.TextView_AvenirLTStd_Light
                android:padding="5.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_clothes_on_way"
                android:maxLines="1" />

            <com.marolix.laundryapp.font.TextView_AvenirLTStd_Book
                android:textColor="@color/colorAccent"
                android:id="@+id/status_delivery_address_type_textView"
                android:padding="5.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:layout_marginRight="15.0dip">

            <com.marolix.laundryapp.font.TextView_AvenirLTStd_Light
                android:padding="5.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_arrive_approx"
                android:maxLines="1" />

            <com.marolix.laundryapp.font.TextView_AvenirLTStd_Book
                android:textColor="@color/colorAccent"
                android:id="@+id/status_delivery_address_time_textView"
                android:padding="5.0dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="150.0dip"
            android:layout_marginTop="20.0dip"
            android:layout_marginBottom="20.0dip">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/status_order_status_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/orders_placed"
                android:contentDescription="@string/app_name" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15.0dip">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15.0dip"
                android:layout_marginTop="5.0dip">

                <ImageView
                    android:id="@+id/picked_tick_imageButton"
                    android:background="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/untick"
                    android:contentDescription="@string/app_name" />

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/picked_status_line_imageView"
                    android:background="@color/light_grey"
                    android:layout_width="1.0dip"
                    android:layout_height="55.0dip"
                    android:contentDescription="@string/app_name" />

                <ImageView
                    android:id="@+id/washed_tick_imageButton"
                    android:background="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/untick"
                    android:contentDescription="@string/app_name" />

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/washed_status_line_imageView"
                    android:background="@color/light_grey"
                    android:layout_width="1.0dip"
                    android:layout_height="55.0dip"
                    android:contentDescription="@string/app_name" />

                <ImageView
                    android:id="@+id/dispatched_tick_imageButton"
                    android:background="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/untick"
                    android:contentDescription="@string/app_name" />

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/dispatched_status_line_imageView"
                    android:background="@color/light_grey"
                    android:layout_width="1.0dip"
                    android:layout_height="55.0dip"
                    android:contentDescription="@string/app_name" />

                <ImageView
                    android:id="@+id/delivered_tick_imageButton"
                    android:background="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/untick"
                    android:contentDescription="@string/app_name" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip">

                <com.marolix.laundryapp.font.TextView_AvenirLTStd_Book
                    android:textColor="@color/black"
                    android:padding="5.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/text_status_picked"
                    android:maxLines="1" />

                <com.marolix.laundryapp.font.TextView_AvenirLTStd_Book
                    android:textColor="@android:color/black"
                    android:id="@+id/picked_message_textView"
                    android:visibility="invisible"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/text_status_picked_text"
                    android:maxLines="1" />

                <View
                    android:layout_gravity="center"
                    android:layout_width="1.0dip"
                    android:layout_height="30.0dip" />

                <com.marolix.laundryapp.font.TextView_AvenirLTStd_Book
                    android:textColor="@android:color/black"
                    android:id="@+id/washing_status_textView"
                    android:padding="5.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/text_status_washing"
                    android:maxLines="1" />

                <com.marolix.laundryapp.font.TextView_AvenirLTStd_Book
                    android:textColor="@android:color/black"
                    android:id="@+id/washing_message_textView"
                    android:visibility="invisible"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/text_status_washing_text"
                    android:maxLines="1" />

                <View
                    android:layout_gravity="center"
                    android:layout_width="1.0dip"
                    android:layout_height="30.0dip" />

                <com.marolix.laundryapp.font.TextView_AvenirLTStd_Book
                    android:textColor="@android:color/black"
                    android:id="@+id/dispatched_status_textView"
                    android:padding="5.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/text_status_dispatched" />

                <com.marolix.laundryapp.font.TextView_AvenirLTStd_Book
                    android:textColor="@android:color/black"
                    android:id="@+id/dispatched_message_textView"
                    android:visibility="invisible"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/text_status_dispatched_text"
                    android:maxLines="1" />

                <View
                    android:layout_gravity="center"
                    android:layout_width="1.0dip"
                    android:layout_height="30.0dip" />

                <com.marolix.laundryapp.font.TextView_AvenirLTStd_Book
                    android:textColor="@android:color/black"
                    android:id="@+id/delivered_status_textView"
                    android:padding="5.0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/text_status_delivered" />

                <com.marolix.laundryapp.font.TextView_AvenirLTStd_Book
                    android:textColor="@android:color/black"
                    android:id="@+id/delivered_message_textView"
                    android:visibility="invisible"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/text_status_delivered_text"
                    android:maxLines="1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>